# matrix-maintainer

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: daily-orchestrator.yml  maintainer.yml  manual-orchestrator.yml  matrix-maintainer-orchestrator.yml  matrix-maintainer.md  orchestrate-agent-matrix.yml  publish-status-site.yml  pull-request-validation.yml  repo-maintenance-worker.yml  rollout-worker-template.yml  sync-matrix-codex-status-to-hf-space.yml  validate-config.yml
app/: __init__.py  main.py
app/agents/: base.py  codex_agent.py  gitpilot_agent.py  ollama_agent.py
app/api/: routes.py
app/control/: dispatcher.py  inventory.py  planner.py  reconciliation.py  scheduler.py
app/db/: database.py  models.py
app/economy/: treasury_adapter.py
app/execution/: repo_executor.py  worker_runner.py
app/integration/: github_client.py  (+1 more)
apps/: __init__.py
config/: policies.yml  profiles.yml  repos.yml  repositories.yml  tasks.yml
docs/: ai-maintainer-guide.md  architecture.md  compatibility.md  technical-guide.md  usage.md
matrix_codex/: __main__.py  cli.py  constants.py  health_scanner.py  logging.py  main.py  models.py  settings.py  task_engine.py
matrix_maintainer/: __init__.py  __main__.py  cli.py  main.py  models.py  settings.py
scripts/: backfill_history.py  publish_site.py  rollout_worker_template.py  run_daily.py  seed_repo_inventory.py  summarize_results.py  trigger_repos.py
status-site/: index.html
target-repo-template/: AGENTS.md
tests/: conftest.py
(+100 files in other folders)
